syntax = "proto3";

package auth;


service UserService{
    rpc CreateUser(CreateUserDto) returns (User) {};
    rpc findAllUsers(Empty) returns (Users) {};
    rpc findneUser(findUserDto) returns (User) {};
    rpc removeUser(findUserDto) returns (User) {};
    rpc queryUsers(stream paginationDto) returns (stream Users) {}; 
}

message paginationDto{
    int32 page = 1;
    int32 skip = 2;
}

message updateUserDto{
    string id = 1;
    SocialMedia socialMedia = 6;
}

message findUserDto{
    string id = 1;
}
message Empty {};

message Users{
    repeated User users = 1;
}
message CreateUserDto{
    string username = 1;
    string password = 2;
    int32 age = 3;
}

message User {
    string id  = 1;
    string username = 2;
    string password = 3;
    int32 age = 4;
    bool subscribed = 5;
    SocialMedia socialMedia = 6;
}


message SocialMedia {
    optional string twitterUri = 1;
    optional string facebookUri = 2;
}
